In process of hooking up button functionality.

--- a/start-here/src/style.css
+++ b/start-here/src/style.css
@@ -96,6 +96,10 @@ body {
   right: 0;
   background-color: orangered;
   color: white;
+  padding: 25px;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 12px;
 }
 
 .modal:empty {
